--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="src/css/style.css">
 </head>
 
-<body>
+<body oncontextmenu="return false;">
     <div class="wrapper">
         <div class="jeu">
         </div>
